# hflossk

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  app.py  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
content/keepers/: OLPCKidsA.ppt  OLPCKidsBppt
docs/: bluesky.txt
hflossk/: .pythong  blueprints.py  email_config.py  participants.py  run.py  schedule.yaml  schedule.yaml.fall2013  site.py  site.yaml  site.yaml.fall2013  syllabus.yaml  util.py  version.py
hflossk/cli/: __init__.py  openshift.py  openshift_utils.py  util.py
hflossk/scripts/: attendance.py
hflossk/static/: manifest.webapp
hflossk/templates/: about.mak  blogs.mak  books.mak  decause.mak  decks.mak  home.mak  instructor.mak  manifest.webapp  master.mak  oer.mak  ohno.mak  participant.mak  resources.mak  syllabus.mak
hflossk/tests/: test_yaml.py
hflossk/yamls/: oer.yaml
scripts/: attendance.py  checkblogs.py  grades.py  hfoss-fall-2014-attend.txt  people.yaml  yaml_lint.py
scripts/people/: AgitatedBadger.yaml  ArcticSphinx.yaml  BeruBeruFunBot.yaml  ChrisKnepper.yaml  Consuuume.yaml  DJ_Mark.yaml  DJ_Mark.yml  Destroyer675000.yaml  Dudeman514.yaml  ExplosiveHippo.yaml  Fangy.yaml  (+42 more)
templates/: about.mak  base.mak  blogs.mak  books.mak  bugfix.html  bugfix.mak  carousel.html  decause.mak  decks.mak  fflight.mak  fluid.html  fluid.mak  hello.html  home.mak  hw.mak  lectures.mak  master.mak  oer.mak  ohno.mak  quiz1.mak  syllabus.html  syllabus.mak  w1c2.html  w1c2.mak  w2c2.mak  w3c1.mak  w3c2.mak  w5c1.mak  w5c2.mak  w6c1.mak  weeklybreakdown.txt
(+207 files in other folders)
