[metadata]
name = hflossk
author = Remy DeCausemaker
author-email = remyd@civx.us
summary = HFOSS course materials via flask
description-file = README.rst
license = GPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    courseware
    hflossk
[files]
packages =
    hflossk
[entry_points]
console_scripts =
    hflossk = hflossk.cli:cli
